objects/GDS__c.object
<CustomObject>
    <fields>
        <fullName>Customer__c</fullName>
        <formula>Quote_Proposal__r.Apttus_Proposal__Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Name__c</fullName>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Account_Short_Name__c</fullName>
        <label>Master Account Short Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Name__c</fullName>
        <formula>Quote_Proposal__r.Process_Technology_Lookup__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PT Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Number__c</fullName>
        <formula>Quote_Proposal__r.Process_Technology_Lookup__r.PT_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PT Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Proposal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote/Proposal</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipName>GDS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Translating</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Top_Cell_Name__c</fullName>
        <label>Top Cell Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>GDS Information File</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>GDS_Queue_GDS</fullName>
        <filterScope>Queue</filterScope>
        <label>GDS Queue</label>
        <queue>GDS_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>GDS-{0000000000}</displayFormat>
        <label>GDS Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GDS Information Files</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>